--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^6.3"
+        "symfony/phpunit-bridge": "^6.3",
+        "symfony/browser-kit": "^4.0"
     }
 }
